# lerobot_sim_lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
assets/configs/: record_config.json  remote_arm_control.config.yaml.example
assets/robots/so100/: calibration.json
assets/robots/so101/: demo_so101_trs_view.py  so101_new_calib.xml
docker/: Dockerfile  README.md  docker-compose.yml
docker/.devcontainer/: devcontainer.json
docs/: architecture.md  contributing.md  docker_setup.md  lerobot_patches.md  ompl_install.md  quickstart.md  remote_arm_control.md  remote_arm_control_quickstart.md  research_report_cn.md  transformers_compatibility.md
patches/: apply_patches.sh  gym-hil-v0.1.13-so100.patch  lerobot-v0.4.3-so100.patch
scripts/: 1_so100_feetech_mujoco_control_sim.py  2_so100_feetech_mujoco_control_realTosim.py  check_model_config.py  demo_pick_and_place.py  demo_with_camera.py  eval_smolvla.sh  lerobot_replay.sh  so100_quick_demo.py  start_policy_server.sh  test_camera_view.py  test_camera_views.py  train_pi.sh  train_smolvla.sh
src/: pen_scenarios_config.py  scenario_library.py  so100_sim_jupyter.py
src/gym_hil/: __init__.py  mujoco_gym_env.py
src/gym_hil/controllers/: __init__.py  opspace.py
src/gym_hil/envs/: __init__.py
src/gym_hil/wrappers/: __init__.py  factory.py  hil_wrappers.py  intervention_utils.py  viewer_wrapper.py
src/lerobot_sim_lab/: __init__.py
src/lerobot_sim_lab/config/: __init__.py  defaults.py
src/lerobot_sim_lab/control/: __init__.py  arm_control.py  interactive.py  joint_explorer.py  keyboard.py
src/lerobot_sim_lab/data/: __init__.py  record_episodes.py  recorder.py  visualize.py
src/lerobot_sim_lab/envs/: __init__.py  controller_config.json  gym_rendering.py  mujoco_gym_env.py  so100_gym_env.py  so100_scripted_env.py
src/lerobot_sim_lab/evaluation/: compare_real_sim.py  eval_smolvla.py
src/lerobot_sim_lab/sim/: debug_cameras.py  scene_analysis.py  scene_viewer.py  simulator.py
src/lerobot_sim_lab/training/: train_policy.py
src/lerobot_sim_lab/trajectory/: __init__.py  compare.py  generator.py  playback.py  visualize_diversity.py
tests/: conftest.py  test_eval_flow.py  test_mplib_api.py  test_mplib_planners.py  test_so100_env.py
(+35 files in other folders)
